Added ExceptionHandler for Bad Request 400 and 404 Not Found exception