@@ -1,11 +1,14 @@
 package com.pluralsight.recipe.controllers;
 
 import com.pluralsight.recipe.commands.RecipeCommand;
+import com.pluralsight.recipe.exceptions.NotFoundException;
 import com.pluralsight.recipe.service.RecipeService;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.servlet.ModelAndView;
 
 @Slf4j
 @Controller
@@ -19,7 +22,7 @@ public class RecipeController {
 
     @RequestMapping("/recipe/{id}/show")
     public String showById(@PathVariable String id, Model model){
-        model.addAttribute("recipe", recipeService.findById(Long.valueOf(id)));
+        model.addAttribute("recipe", recipeService.findById(new Long(id)));
         return "recipe/show";
     }
 
@@ -53,4 +56,28 @@ public class RecipeController {
         return "redirect:/";
     }
 
+    @ResponseStatus(HttpStatus.NOT_FOUND)
+    @ExceptionHandler(NotFoundException.class)
+    public ModelAndView handleNotFound(Exception exception)
+    {
+        log.error("Handling Not Found Exception");
+        ModelAndView mav = new ModelAndView();
+//        mav.addObject("exception",)
+        mav.setViewName("recipe/404Error");
+        mav.addObject("exception",exception);
+        return mav;
+    }
+
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
+    @ExceptionHandler(NumberFormatException.class)
+    public ModelAndView handleNumberFormatException(Exception exception)
+    {
+        log.error("Handling Number Format Exception");
+        log.error(exception.getMessage());
+        ModelAndView mav = new ModelAndView();
+//        mav.addObject("exception",)
+        mav.setViewName("recipe/400Error");
+        mav.addObject("exception",exception);
+        return mav;
+    }
 }
